fix(Field): Properly align label for inline variant

--- a/react/Field/styles.styl
+++ b/react/Field/styles.styl
@@ -1,4 +1,5 @@
 @require '../../stylus/components/forms'
+@require 'settings/spaces.styl'
 
 .o-field
     @extend $field
@@ -11,7 +12,7 @@
         flex-basis rem(128)
         flex-shrink 0
         flex-grow 0
-        padding 0.75rem 0
+        padding spacing_values.m 0
 
         +small-screen()
             flex-basis auto
